Bug 166347 - Trash green arrow does not go away when widgets are locked
Summary: Trash green arrow does not go away when widgets are locked
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-12 05:33 UTC by Luciano Leveroni
Modified: 2008-07-13 20:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luciano Leveroni 2008-07-12 05:33:59 UTC
Version:            (using Devel)
Installed from:    Compiled sources

When hovering the Trash plasmoid a green arrow appears and goes away after leaving the applet. However, when the widgets are locked this arrows does not disappear. I've notice this issue some time ago.

I'm using 4.1 SVN (4.1 branch, not trunk) from a Gentoo overlay.
Comment 1 Florian Sievert 2008-07-12 14:44:36 UTC
I can confirm this on 4.0.85.
Comment 2 Anne-Marie Mahfouf 2008-07-13 18:06:06 UTC
Confirmed
Comment 3 Marco Martin 2008-07-13 20:39:24 UTC
SVN commit 831975 by mart:

redraw the parent item when the animation updates
to be backported

BUG: 166347
CCMAIL:panel-devel@kde.org


 M  +2 -0      animator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=831975