redraw the parent item when the animation updates to be backported

BUG: 166347
CCMAIL:panel-devel@kde.org

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=831975